// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`MWAF Compiler Compiles complex-expressions.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
import { signal as _signal, effect as _effect } from "@preact/signals-core";
class ComplexExpressionsElement extends HTMLElement {
  static observedAttributes = ["theme", "color", "loading", "title", "logMessage"];
  set theme(val) {
    this._propsSignals["theme"].value = val;
  }
  set color(val) {
    this._propsSignals["color"].value = val;
  }
  set loading(val) {
    this._propsSignals["loading"].value = val;
  }
  set title(val) {
    this._propsSignals["title"].value = val;
  }
  set logMessage(val) {
    this._propsSignals["logMessage"].value = val;
  }
  get theme() {
    return this._propsSignals["theme"].value;
  }
  get color() {
    return this._propsSignals["color"].value;
  }
  get loading() {
    return this._propsSignals["loading"].value;
  }
  get title() {
    return this._propsSignals["title"].value;
  }
  get logMessage() {
    return this._propsSignals["logMessage"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      theme: _signal(null),
      color: _signal(null),
      loading: _signal(null),
      title: _signal(null),
      logMessage: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      let count = _signal(0);
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _effect(() => el0.className = props.theme);
        _effect(() => Object.assign(el0.style, {
          color: props.color,
          opacity: count.value > 5 ? 1 : 0.5
        }));
        _renderDynamic(el0, () => props.loading ? (() => {
          const el0 = document.createElement("span");
          const text1 = document.createTextNode("Loading...");
          el0.appendChild(text1);
          return el0;
        })() : (() => {
          const el0 = document.createElement("div");
          const el1 = document.createElement("h1");
          _renderDynamic(el1, () => props.title);
          el0.appendChild(el1);
          const el2 = document.createElement("button");
          el2.onclick = () => console.log(props.logMessage);
          const text3 = document.createTextNode("Log ");
          el2.appendChild(text3);
          _renderDynamic(el2, () => count.value);
          el0.appendChild(el2);
          return el0;
        })());
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-complexexpressions", ComplexExpressionsElement);
export default ComplexExpressionsElement;"
`;

exports[`MWAF Compiler Compiles conditional.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal as _signal } from "@preact/signals-core";
import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
class ItemElement extends HTMLElement {
  static observedAttributes = ["name", "isPacked"];
  set name(val) {
    this._propsSignals["name"].value = val;
  }
  set isPacked(val) {
    this._propsSignals["isPacked"].value = val;
  }
  get name() {
    return this._propsSignals["name"].value;
  }
  get isPacked() {
    return this._propsSignals["isPacked"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      name: _signal(null),
      isPacked: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElement("li");
        el0.className = "item";
        _renderDynamic(el0, () => props.isPacked ? (() => {
          const el0 = document.createElement("del");
          _renderDynamic(el0, () => props.name + ' ✅');
          return el0;
        })() : props.name);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-item", ItemElement);
export default ItemElement;"
`;

exports[`MWAF Compiler Compiles routing-404.404.jsx 1`] = `
"export function render(root, props) {
  const rootElement = (() => {
    const el0 = document.createElement("div");
    const el1 = document.createElement("h1");
    const text2 = document.createTextNode("404 - Not Found");
    el1.appendChild(text2);
    el0.appendChild(el1);
    const el3 = document.createElement("p");
    const text4 = document.createTextNode("The page you are looking for does not exist.");
    el3.appendChild(text4);
    el0.appendChild(el3);
    return el0;
  })();
  root.appendChild(rootElement);
}"
`;

exports[`MWAF Compiler Compiles children-projection.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal as _signal } from "@preact/signals-core";
class WrapperElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElement("div");
        el0.className = "wrapper";
        const el1 = document.createElement("header");
        const text2 = document.createTextNode("Header");
        el1.appendChild(text2);
        el0.appendChild(el1);
        const el3 = document.createElement("main");
        el0.appendChild(el3);
        const el4 = document.createElement("footer");
        const text5 = document.createTextNode("Footer");
        el4.appendChild(text5);
        el0.appendChild(el4);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-wrapper", WrapperElement);
export default WrapperElement;"
`;

exports[`MWAF Compiler Compiles lifecycle.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal as _signal } from "@preact/signals-core";
import { onMount as _onMount, onCleanup as _onCleanup } from "/framework/runtime/lifecycle.js";
class LifecycleElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      _onMount(() => {
        console.log("mounted");
      });
      _onCleanup(() => {
        console.log("cleaned up");
      });
      const rootElement = (() => {
        const el0 = document.createElement("div");
        const text1 = document.createTextNode("Lifecycle");
        el0.appendChild(text1);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-lifecycle", LifecycleElement);
export default LifecycleElement;"
`;

exports[`MWAF Compiler Compiles reactivity.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
import { signal as _signal, effect as _effect } from "@preact/signals-core";
import { signal } from "@preact/signals";
class ReactivityElement extends HTMLElement {
  static observedAttributes = ["title"];
  set title(val) {
    this._propsSignals["title"].value = val;
  }
  get title() {
    return this._propsSignals["title"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      title: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      let count = _signal(0);
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _effect(() => el0.title = props.title);
        const el1 = document.createElement("span");
        _renderDynamic(el1, () => count.value);
        el0.appendChild(el1);
        const el2 = document.createElement("button");
        el2.onclick = () => count.value++;
        const text3 = document.createTextNode("Add");
        el2.appendChild(text3);
        el0.appendChild(el2);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-reactivity", ReactivityElement);
export default ReactivityElement;"
`;

exports[`MWAF Compiler Compiles nested-reactivity.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
import { signal as _signal, effect as _effect } from "@preact/signals-core";
class NestedReactivityElement extends HTMLElement {
  static observedAttributes = ["title"];
  set title(val) {
    this._propsSignals["title"].value = val;
  }
  get title() {
    return this._propsSignals["title"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      title: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      let show = _signal(true);
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _renderDynamic(el0, () => show.value && (() => {
          const el0 = document.createElement("span");
          _effect(() => el0.title = props.title);
          const text1 = document.createTextNode("Hello");
          el0.appendChild(text1);
          return el0;
        })());
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-nestedreactivity", NestedReactivityElement);
export default NestedReactivityElement;"
`;

exports[`MWAF Compiler Compiles basic-elements.page.jsx 1`] = `
"export function render(root, props) {
  const rootElement = (() => {
    const el0 = document.createElement("div");
    const el1 = document.createElement("h1");
    const text2 = document.createTextNode("Hello");
    el1.appendChild(text2);
    el0.appendChild(el1);
    const el3 = document.createElement("p");
    const text4 = document.createTextNode("World");
    el3.appendChild(text4);
    el0.appendChild(el3);
    return el0;
  })();
  root.appendChild(rootElement);
}"
`;

exports[`MWAF Compiler Compiles spread.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal as _signal } from "@preact/signals-core";
import { applySpread as _applySpread } from "/framework/runtime/props.js";
class SpreadTestElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const props = {
        id: "test",
        className: "foo",
        "data-custom": "bar"
      };
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _applySpread(el0, props);
        const el1 = document.createElement("span");
        _applySpread(el1, {
          style: {
            color: "red"
          }
        });
        const text2 = document.createTextNode("Hello");
        el1.appendChild(text2);
        el0.appendChild(el1);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-spreadtest", SpreadTestElement);
export default SpreadTestElement;"
`;

exports[`MWAF Compiler Compiles state-edge-cases.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
import { signal as _signal } from "@preact/signals-core";
class StateEdgeCasesElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      let count = _signal(0);
      let user = _signal({
        name: "Alice",
        age: 30
      });
      let todos = _signal([]);

      // 1. Basic reassignment
      count.value = 10;

      // 2. Update expressions
      count.value++;
      --count.value;

      // 3. Member expressions
      user.value.name = "Bob";
      const age = user.value.age;
      todos.value.push("learn waf");

      // 4. Object property shorthand
      const data = {
        count: count.value,
        user: user.value
      };

      // 5. Destructuring
      const {
        name
      } = user.value;
      const [first] = todos.value;

      // 6. Computed property access
      const prop = "age";
      console.log(user.value[prop]);

      // 7. Passing as argument
      console.log(count.value, user.value);
      const rootElement = (() => {
        const el0 = document.createElement("div");
        const el1 = document.createElement("span");
        _renderDynamic(el1, () => count.value);
        el0.appendChild(el1);
        const el2 = document.createElement("span");
        _renderDynamic(el2, () => user.value.name);
        el0.appendChild(el2);
        const el3 = document.createElement("button");
        el3.onclick = () => {
          count.value++;
          user.value.age++;
        };
        const text4 = document.createTextNode("Increment");
        el3.appendChild(text4);
        el0.appendChild(el3);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-stateedgecases", StateEdgeCasesElement);
export default StateEdgeCasesElement;"
`;

exports[`MWAF Compiler Compiles styling.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal as _signal, effect as _effect } from "@preact/signals-core";
class StylingTestElement extends HTMLElement {
  static observedAttributes = ["theme"];
  set theme(val) {
    this._propsSignals["theme"].value = val;
  }
  get theme() {
    return this._propsSignals["theme"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      theme: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      let active = _signal(true);
      const rootElement = (() => {
        const el0 = document.createElement("div");
        el0.className = "static-class";
        el0.className = "static-classname";
        const el1 = document.createElement("span");
        _effect(() => el1.className = active.value ? "active" : "inactive");
        const text2 = document.createTextNode("Reactive Class");
        el1.appendChild(text2);
        el0.appendChild(el1);
        const el3 = document.createElement("button");
        _effect(() => el3.className = props.theme);
        const text4 = document.createTextNode("Reactive ClassName from Props");
        el3.appendChild(text4);
        el0.appendChild(el3);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-stylingtest", StylingTestElement);
export default StylingTestElement;"
`;

exports[`MWAF Compiler Compiles ref.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { effect as _effect } from "@preact/signals-core";
import { onMount as _onMount } from "/framework/runtime/lifecycle.js";
import { signal as _signal } from "@preact/signals-core";
class CustomInputElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const input = _signal();
      const focus = () => input.value.focus();
      Object.assign(this, {
        focus
      });
      const rootElement = (() => {
        const el0 = document.createElement("input");
        input.value = el0;
        el0.setAttribute("type", "text");
        el0.setAttribute("placeholder", "Custom Input");
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-custominput", CustomInputElement);
class RefTestElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const myDiv = _signal();
      const myInput = _signal();
      let color = _signal("red");
      _onMount(() => {
        myDiv.value.style.backgroundColor = "lightgray";
        myInput.value.focus();
      });
      const rootElement = (() => {
        const el0 = document.createElement("div");
        myDiv.value = el0;
        _effect(() => Object.assign(el0.style, {
          padding: "20px"
        }));
        const el1 = document.createElement("h1");
        _effect(() => Object.assign(el1.style, {
          color: color.value
        }));
        const text2 = document.createTextNode("Ref Test");
        el1.appendChild(text2);
        el0.appendChild(el1);
        const el3 = document.createElement("mwaf-custominput");
        myInput.value = el3;
        el0.appendChild(el3);
        const el4 = document.createElement("button");
        el4.onclick = () => color.value = "blue";
        const text5 = document.createTextNode("Change Color");
        el4.appendChild(text5);
        el0.appendChild(el4);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-reftest", RefTestElement);
export default RefTestElement;"
`;

exports[`MWAF Compiler Compiles products-page.page.jsx 1`] = `
"import { renderDynamic as _renderDynamic, mapped as _mapped } from "/framework/runtime/dom.js";
import { signal as _signal, effect as _effect } from "@preact/signals-core";
export function render(root, props) {
  let products = _signal(Array.from({
    length: 1000
  }, (_, i) => ({
    id: i,
    name: \`Product \${i}\`,
    price: Math.floor(Math.random() * 1000)
  })));
  const shuffle = () => {
    const arr = [...products.value];
    for (let i = arr.length - 1; i > 0; i--) {
      const j = Math.floor(Math.random() * (i + 1));
      [arr[i], arr[j]] = [arr[j], arr[i]];
    }
    products.value = arr;
  };
  const reverse = () => {
    products.value = [...products.value].reverse();
  };
  const rootElement = (() => {
    const el0 = document.createElement("div");
    const el1 = document.createElement("div");
    el1.className = "flex justify-between items-center mb-6";
    const el2 = document.createElement("h1");
    el2.className = "text-2xl font-bold text-white";
    const text3 = document.createTextNode("Products (1000 items)");
    el2.appendChild(text3);
    el1.appendChild(el2);
    const el4 = document.createElement("div");
    el4.className = "space-x-4";
    const el5 = document.createElement("button");
    el5.onclick = shuffle;
    el5.className = "bg-indigo-600 px-4 py-2 rounded text-white hover:bg-indigo-500 transition-colors";
    const text6 = document.createTextNode("Shuffle List");
    el5.appendChild(text6);
    el4.appendChild(el5);
    const el7 = document.createElement("button");
    el7.onclick = reverse;
    el7.className = "bg-slate-700 px-4 py-2 rounded text-white hover:bg-slate-600 transition-colors";
    const text8 = document.createTextNode("Reverse List");
    el7.appendChild(text8);
    el4.appendChild(el7);
    el1.appendChild(el4);
    el0.appendChild(el1);
    const el9 = document.createElement("div");
    el9.className = "grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4";
    const mapped10 = _mapped(() => products.value, p => (() => {
      const el0 = document.createElement("div");
      el0._key = p.id;
      el0.className = "p-4 bg-slate-800 rounded border border-slate-700 hover:border-indigo-500 transition-all";
      const el1 = document.createElement("div");
      el1.className = "font-bold text-white";
      _renderDynamic(el1, () => p.name);
      el0.appendChild(el1);
      const el2 = document.createElement("div");
      el2.className = "text-slate-400 mt-1";
      const text3 = document.createTextNode("$");
      el2.appendChild(text3);
      _renderDynamic(el2, () => p.price);
      el0.appendChild(el2);
      const el4 = document.createElement("input");
      el4.setAttribute("placeholder", "Add note...");
      el4.className = "mt-2 w-full bg-slate-900 border border-slate-700 rounded px-2 py-1 text-sm text-slate-300 focus:outline-none focus:border-indigo-500";
      el0.appendChild(el4);
      return el0;
    })());
    _renderDynamic(el9, () => mapped10);
    el0.appendChild(el9);
    return el0;
  })();
  root.appendChild(rootElement);
}"
`;

exports[`MWAF Compiler Compiles comments.page.jsx 1`] = `
"export function render(root, props) {
  const rootElement = (() => {
    const el0 = document.createElement("div");
    const el1 = document.createElement("h1");
    const text2 = document.createTextNode("Title");
    el1.appendChild(text2);
    el0.appendChild(el1);
    const el3 = document.createElement("p");
    el3.className = "foo";
    const text4 = document.createTextNode("Content");
    el3.appendChild(text4);
    el0.appendChild(el3);
    return el0;
  })();
  root.appendChild(rootElement);
}"
`;

exports[`MWAF Compiler Compiles svg.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal as _signal, effect as _effect } from "@preact/signals-core";
class SvgTestElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      let strokeWidth = _signal(2);
      const rootElement = (() => {
        const el0 = document.createElementNS("http://www.w3.org/2000/svg", "svg");
        el0.setAttribute("width", "100");
        el0.setAttribute("height", "100");
        el0.setAttribute("view-box", "0 0 100 100");
        const el1 = document.createElementNS("http://www.w3.org/2000/svg", "circle");
        el1.setAttribute("cx", "50");
        el1.setAttribute("cy", "50");
        el1.setAttribute("r", "40");
        el1.setAttribute("stroke", "red");
        _effect(() => el1.setAttribute("stroke-width", strokeWidth.value));
        el1.setAttribute("fill", "transparent");
        el0.appendChild(el1);
        const el2 = document.createElementNS("http://www.w3.org/2000/svg", "path");
        el2.setAttribute("d", "M 10 10 L 90 90");
        el2.setAttribute("stroke", "blue");
        el2.setAttribute("stroke-linecap", "round");
        el0.appendChild(el2);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-svgtest", SvgTestElement);
export default SvgTestElement;"
`;

exports[`MWAF Compiler Compiles component-props.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
import { signal as _signal, effect as _effect } from "@preact/signals-core";
class ParentElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      let count = _signal(0);
      const rootElement = (() => {
        const el0 = document.createElement("div");
        const el1 = document.createElement("mwaf-child");
        _effect(() => el1.val = count.value);
        el0.appendChild(el1);
        const el2 = document.createElement("button");
        el2.onclick = () => count.value++;
        const text3 = document.createTextNode("Inc");
        el2.appendChild(text3);
        el0.appendChild(el2);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-parent", ParentElement);
export default ParentElement;
class ChildElement extends HTMLElement {
  static observedAttributes = ["val"];
  set val(val) {
    this._propsSignals["val"].value = val;
  }
  get val() {
    return this._propsSignals["val"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      val: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _renderDynamic(el0, () => props.val);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-child", ChildElement);"
`;

exports[`MWAF Compiler Compiles multiple-components.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal as _signal } from "@preact/signals-core";
import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
import { effect as _effect } from "@preact/signals-core";
class MultipleComponentsElement extends HTMLElement {
  static observedAttributes = ["a", "b"];
  set a(val) {
    this._propsSignals["a"].value = val;
  }
  set b(val) {
    this._propsSignals["b"].value = val;
  }
  get a() {
    return this._propsSignals["a"].value;
  }
  get b() {
    return this._propsSignals["b"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      a: _signal(null),
      b: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElement("div");
        const el1 = document.createElement("mwaf-a");
        _effect(() => el1.val = props.a);
        el0.appendChild(el1);
        const el2 = document.createElement("mwaf-b");
        _effect(() => el2.val = props.b);
        el0.appendChild(el2);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-multiplecomponents", MultipleComponentsElement);
export default MultipleComponentsElement;
class AElement extends HTMLElement {
  static observedAttributes = ["val"];
  set val(val) {
    this._propsSignals["val"].value = val;
  }
  get val() {
    return this._propsSignals["val"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      val: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _renderDynamic(el0, () => props.val);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-a", AElement);
class BElement extends HTMLElement {
  static observedAttributes = ["val"];
  set val(val) {
    this._propsSignals["val"].value = val;
  }
  get val() {
    return this._propsSignals["val"].value;
  }
  constructor() {
    super();
    this._propsSignals = {
      val: _signal(null)
    };
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _renderDynamic(el0, () => props.val);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-b", BElement);"
`;

exports[`MWAF Compiler Compiles routing-layout.layout.jsx 1`] = `
"import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
export function render(root, props) {
  const rootElement = (() => {
    const el0 = document.createElement("div");
    el0.className = "root-layout";
    const el1 = document.createElement("nav");
    const el2 = document.createElement("a");
    el2.href = "/";
    const text3 = document.createTextNode("Home");
    el2.appendChild(text3);
    el1.appendChild(el2);
    el0.appendChild(el1);
    const el4 = document.createElement("main");
    _renderDynamic(el4, () => props.children);
    el0.appendChild(el4);
    return el0;
  })();
  root.appendChild(rootElement);
}"
`;

exports[`MWAF Compiler Compiles catch-all-page.page.jsx 1`] = `
"import { renderDynamic as _renderDynamic, mapped as _mapped } from "/framework/runtime/dom.js";
export function render(root, props) {
  const rootElement = (() => {
    const el0 = document.createElement("div");
    const el1 = document.createElement("h1");
    el1.className = "text-2xl font-bold";
    const text2 = document.createTextNode("Shop");
    el1.appendChild(text2);
    el0.appendChild(el1);
    const el3 = document.createElement("p");
    el3.className = "mt-4";
    const text4 = document.createTextNode("Slug segments: ");
    el3.appendChild(text4);
    el0.appendChild(el3);
    const el5 = document.createElement("ul");
    el5.className = "list-disc ml-6 mt-2";
    const mapped6 = _mapped(() => props.params.slug, segment => (() => {
      const el0 = document.createElement("li");
      _renderDynamic(el0, () => segment);
      return el0;
    })());
    _renderDynamic(el5, () => mapped6);
    el0.appendChild(el5);
    const el7 = document.createElement("div");
    el7.className = "mt-4 p-4 bg-slate-800 rounded";
    const text8 = document.createTextNode("Full path: ");
    el7.appendChild(text8);
    const el9 = document.createElement("span");
    el9.className = "text-indigo-400 font-mono";
    const text10 = document.createTextNode("/shop/");
    el9.appendChild(text10);
    _renderDynamic(el9, () => props.params.slug.join('/'));
    el7.appendChild(el9);
    el0.appendChild(el7);
    return el0;
  })();
  root.appendChild(rootElement);
}"
`;

exports[`MWAF Compiler Compiles inline-styles.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { signal as _signal, effect as _effect } from "@preact/signals-core";
class StyleTestElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      let color = _signal("red");
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _effect(() => Object.assign(el0.style, {
          display: "flex",
          gap: "10px"
        }));
        const el1 = document.createElement("span");
        _effect(() => Object.assign(el1.style, {
          color: color.value
        }));
        const text2 = document.createTextNode("Reactive Style");
        el1.appendChild(text2);
        el0.appendChild(el1);
        const el3 = document.createElement("div");
        el3.style = "font-weight: bold;";
        const text4 = document.createTextNode("Static Style String");
        el3.appendChild(text4);
        el0.appendChild(el3);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-styletest", StyleTestElement);
export default StyleTestElement;"
`;

exports[`MWAF Compiler Compiles macros.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
import { signal as _signal, computed as _computed, effect as _effect } from "@preact/signals-core";
class MacroTestElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      let count = _signal(0);
      const doubled = _computed(() => count.value * 2);
      _effect(() => {
        console.log("Count changed:", count.value);
      });
      const rootElement = (() => {
        const el0 = document.createElement("div");
        const el1 = document.createElement("p");
        const text2 = document.createTextNode("Count: ");
        el1.appendChild(text2);
        _renderDynamic(el1, () => count.value);
        el0.appendChild(el1);
        const el3 = document.createElement("p");
        const text4 = document.createTextNode("Doubled: ");
        el3.appendChild(text4);
        _renderDynamic(el3, () => doubled.value);
        el0.appendChild(el3);
        const el5 = document.createElement("button");
        el5.onclick = () => count.value++;
        const text6 = document.createTextNode("Increment");
        el5.appendChild(text6);
        el0.appendChild(el5);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-macrotest", MacroTestElement);
export default MacroTestElement;"
`;

exports[`MWAF Compiler Compiles list-rendering.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { renderDynamic as _renderDynamic, mapped as _mapped } from "/framework/runtime/dom.js";
import { signal as _signal } from "@preact/signals-core";
class ListRenderingElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      let items = _signal(['A', 'B', 'C']);
      const rootElement = (() => {
        const el0 = document.createElement("div");
        const el1 = document.createElement("ul");
        const mapped2 = _mapped(() => items.value, item => (() => {
          const el0 = document.createElement("li");
          const text1 = document.createTextNode("Item ");
          el0.appendChild(text1);
          _renderDynamic(el0, () => item);
          return el0;
        })());
        _renderDynamic(el1, () => mapped2);
        el0.appendChild(el1);
        const el3 = document.createElement("button");
        el3.onclick = () => items.value = [...items.value, 'D'];
        const text4 = document.createTextNode("Add");
        el3.appendChild(text4);
        el0.appendChild(el3);
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-listrendering", ListRenderingElement);
export default ListRenderingElement;"
`;

exports[`MWAF Compiler Compiles nested-fragments.jsx 1`] = `
"import { withInstance as _withInstance } from "/framework/runtime/lifecycle.js";
import { createPropsProxy as _createPropsProxy } from "/framework/runtime/props.js";
import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
import { signal as _signal } from "@preact/signals-core";
class NestedFragmentsElement extends HTMLElement {
  static observedAttributes = [];
  constructor() {
    super();
    this._propsSignals = {};
  }
  attributeChangedCallback(name, _, value) {
    this._propsSignals[name].value = value;
  }
  connectedCallback() {
    this._onMounts = [];
    this._onCleanups = [];
    const props = _createPropsProxy(this);
    _withInstance(this, () => {
      let show = _signal(true);
      const rootElement = (() => {
        const el0 = document.createElement("div");
        _renderDynamic(el0, () => show.value && (() => {
          const frag0 = document.createDocumentFragment();
          const el1 = document.createElement("span");
          const text2 = document.createTextNode("A");
          el1.appendChild(text2);
          frag0.appendChild(el1);
          const frag3 = document.createDocumentFragment();
          const el4 = document.createElement("span");
          const text5 = document.createTextNode("B");
          el4.appendChild(text5);
          frag3.appendChild(el4);
          const el6 = document.createElement("span");
          const text7 = document.createTextNode("C");
          el6.appendChild(text7);
          frag3.appendChild(el6);
          frag0.appendChild(frag3);
          return frag0;
        })());
        return el0;
      })();
      while (this.firstChild) rootElement.appendChild(this.firstChild);
      this.appendChild(rootElement);
    });
    this._onMounts.forEach(fn => fn());
  }
  disconnectedCallback() {
    this._onCleanups.forEach(fn => fn());
  }
}
customElements.define("mwaf-nestedfragments", NestedFragmentsElement);
export default NestedFragmentsElement;"
`;

exports[`MWAF Compiler Compiles dynamic-page.page.jsx 1`] = `
"import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
import { onMount as _onMount, onCleanup as _onCleanup } from "/framework/runtime/lifecycle.js";
export function render(root, props) {
  _onMount(() => {
    console.log(\`Post page mounted with ID: \${props.params.id}\`);
  });
  _onCleanup(() => {
    console.log(\`Post page cleaned up with ID: \${props.params.id}\`);
  });
  const rootElement = (() => {
    const el0 = document.createElement("div");
    const el1 = document.createElement("h1");
    el1.className = "text-2xl font-bold";
    const text2 = document.createTextNode("Post ");
    el1.appendChild(text2);
    _renderDynamic(el1, () => props.params.id);
    el0.appendChild(el1);
    const el3 = document.createElement("p");
    el3.className = "mt-4";
    const text4 = document.createTextNode("This is a dynamic post page for ID: ");
    el3.appendChild(text4);
    const el5 = document.createElement("span");
    el5.className = "font-mono bg-gray-200 px-1";
    _renderDynamic(el5, () => props.params.id);
    el3.appendChild(el5);
    el0.appendChild(el3);
    return el0;
  })();
  root.appendChild(rootElement);
}"
`;

exports[`MWAF Compiler Compiles whitespace.page.jsx 1`] = `
"import { renderDynamic as _renderDynamic } from "/framework/runtime/dom.js";
export function render(root, props) {
  const name = "MWAF";
  const rootElement = (() => {
    const el0 = document.createElement("div");
    const el1 = document.createElement("span");
    const text2 = document.createTextNode("Hello ");
    el1.appendChild(text2);
    _renderDynamic(el1, () => name);
    const text3 = document.createTextNode("!");
    el1.appendChild(text3);
    el0.appendChild(el1);
    const el4 = document.createElement("p");
    const text5 = document.createTextNode("Line 1Line 2");
    el4.appendChild(text5);
    el0.appendChild(el4);
    const el6 = document.createElement("div");
    const text7 = document.createTextNode("Spaces should be preserved here -> ");
    el6.appendChild(text7);
    el0.appendChild(el6);
    return el0;
  })();
  root.appendChild(rootElement);
}"
`;
